# seastar-wasmtime

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.MD  fib.c  make-wasm.sh
.devcontainer/: Dockerfile  setup.sh
src/: CMakeLists.txt  main.cc  seastar_ffi.cc
src/include/: seastar_ffi.h
src/rust/: Cargo.toml
src/rust/src/: lib.rs
